# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos_var.gni")
import("//build/test.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")

module_output_path = "datamgr_service/datamgr_service/distributeddatafwk"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${data_service_path}/service/bootstrap/include/",
    "${data_service_path}/service/common/",
    "${data_service_path}/service/rdb/",
    "${data_service_path}/adapter/include",
    "${data_service_path}/framework/include",
    "${data_service_path}/service/config/include",
    "${data_service_path}/app/src",
    "${data_service_path}/adapter/include/account",
    "${data_service_path}/adapter/include/communicator",
    "${data_service_path}/app/src/security",
    "${data_service_path}/service/crypto/include",
    "${data_service_path}/service/matrix/include",
    "${data_service_path}/service/kvdb",
  ]
  cflags = [ "-Werror" ]
  ldflags = [ "-Wl,--whole-archive" ]
  defines = [ "OPENSSL_SUPPRESS_DEPRECATED" ]
}

ohos_unittest("CheckerManagerTest") {
  module_out_path = module_output_path
  sources = [ "checker_manager_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "openssl:libcrypto_shared",
  ]

  deps = [
    "${data_service_path}/app/src/checker:distributeddata_checker",
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
  ]
}

ohos_unittest("EventCenterTest") {
  module_out_path = module_output_path
  sources = [ "event_center_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
  ]

  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("SerializableTest") {
  module_out_path = module_output_path

  sources = [ "serializable_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "openssl:libcrypto_shared",
  ]

  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("ServiceUtilsTest") {
  module_out_path = module_output_path

  sources = [ "utils_test.cpp" ]

  configs = [ ":module_private_config" ]

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "cJSON:cjson",
  ]

  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("StoreTest") {
  module_out_path = module_output_path

  include_dirs = [
    "${data_service_path}/service/test/mock",
    "${data_service_path}/framework/include/screen",
  ]

  sources = [
    "${data_service_path}/framework/metadata/store_meta_data.cpp",
    "${data_service_path}/framework/store/auto_cache.cpp",
    "${data_service_path}/service/rdb/rdb_query.cpp",
    "store_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "c_utils:utils",
    "common_event_service:cesfwk_innerkits",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddb",
    "relational_store:native_rdb",
  ]

  deps = [
    "${data_service_path}/adapter/account:distributeddata_account",
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
    "${data_service_path}/service/common:distributeddata_common",
    "${data_service_path}/service/test/mock:distributeddata_mock_static",
  ]
}

ohos_unittest("AssetLoaderTest") {
  module_out_path = module_output_path
  sources = [ "asset_loader_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("BackupRuleManagerTest") {
  module_out_path = module_output_path
  sources = [ "backup_rule_manager_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("BindEventTest") {
  module_out_path = module_output_path
  sources = [ "bind_event_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("CloudInfoTest") {
  module_out_path = module_output_path
  sources = [ "cloud_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]

  external_deps = [
    "cJSON:cjson",
    "kv_store:datamgr_common",
  ]
}

ohos_unittest("EventTest") {
  module_out_path = module_output_path
  sources = [ "event_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("GeneralStoreTest") {
  module_out_path = module_output_path
  sources = [ "general_store_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
  external_deps = [ "kv_store:datamgr_common" ]
}

ohos_unittest("SubscriptionTest") {
  module_out_path = module_output_path
  sources = [ "subscription_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
  external_deps = [
    "cJSON:cjson",
    "kv_store:datamgr_common",
  ]
}

ohos_unittest("FeatureTest") {
  module_out_path = module_output_path
  sources = [ "feature_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
  external_deps = [ "kv_store:distributeddata_inner" ]
}

ohos_unittest("MetaDataManagerTest") {
  module_out_path = module_output_path

  sources = [ "meta_data_manager_test.cpp" ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_core",
    "cJSON:cjson",
  ]

  deps = [
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service:distributeddatasvc",
  ]
}

ohos_unittest("StoreMetaDataLocalTest") {
  module_out_path = module_output_path
  sources = [ "store_meta_data_local_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
  external_deps = [ "cJSON:cjson" ]
}

ohos_unittest("ConstantTest") {
  module_out_path = module_output_path
  sources = [ "constant_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("CryptoTest") {
  module_out_path = module_output_path
  sources = [ "crypto_test.cpp" ]
  configs = [ ":module_private_config" ]
  deps = [ "${data_service_path}/framework:distributeddatasvcfwk" ]
}

ohos_unittest("ServiceMetaDataTest") {
  module_out_path = module_output_path

  sources = [
    "${data_service_path}/app/src/kvstore_meta_manager.cpp",
    "meta_data_test.cpp",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cflags = [
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  configs = [ ":module_private_config" ]

  external_deps = [
    "c_utils:utils",
    "dataclassification:data_transit_mgr",
    "device_auth:deviceauth_sdk",
    "device_manager:devicemanagersdk",
    "googletest:gtest_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hitrace:libhitracechain",
    "ipc:ipc_core",
    "cJSON:cjson",
    "kv_store:distributeddata_inner",
    "kv_store:distributeddata_mgr",
    "kv_store:distributeddb",
    "openssl:libcrypto_shared",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  deps = [
    "${data_service_path}/adapter/account:distributeddata_account",
    "${data_service_path}/adapter/communicator:distributeddata_communicator",
    "${data_service_path}/adapter/utils:distributeddata_utils",
    "${data_service_path}/app/src/checker:distributeddata_checker",
    "${data_service_path}/framework:distributeddatasvcfwk",
    "${data_service_path}/service/kvdb:distributeddata_kvdb",
  ]
}

###############################################################################
group("unittest") {
  testonly = true

  deps = []

  deps += [
    ":AssetLoaderTest",
    ":BackupRuleManagerTest",
    ":BindEventTest",
    ":CheckerManagerTest",
    ":CloudInfoTest",
    ":ConstantTest",
    ":CryptoTest",
    ":EventCenterTest",
    ":EventTest",
    ":FeatureTest",
    ":GeneralStoreTest",
    ":MetaDataManagerTest",
    ":SerializableTest",
    ":ServiceMetaDataTest",
    ":ServiceUtilsTest",
    ":StoreMetaDataLocalTest",
    ":StoreTest",
    ":SubscriptionTest",
  ]
}
###############################################################################
