# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributeddatamgr/datamgr_service/datamgr_service.gni")

group("build_module") {
  deps = [ ":opencloudextension" ]
}
config("module_public_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "../../framework/include",
    "${kv_store_common_path}",
  ]
}

ohos_shared_library("opencloudextension") {
  include_dirs = [ "../ylong_cloud_extension/include" ]
  sources = [
    "asset_loader_impl.cpp",
    "cloud_cursor_impl.cpp",
    "cloud_db_impl.cpp",
    "cloud_server_impl.cpp",
    "extension_util.cpp",
  ]
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  cflags = [ "-Wno-multichar" ]

  cflags_cc = [ "-fvisibility=hidden" ]

  configs = [ ":module_public_config" ]

  deps = [
    "../../framework:distributeddatasvcfwk",
    "../ylong_cloud_extension:ylong_cloud_extension",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "hilog:libhilog",
    "kv_store:distributeddata_inner",
  ]
  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"
}
