# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")

# ohos_rust_static_ffi("ylong_cloud_extension") {
ohos_rust_shared_ffi("ylong_cloud_extension") {
  crate_name = "ylong_cloud_extension"
  crate_root = "src/lib.rs"

  subsystem_name = "distributeddatamgr"
  part_name = "datamgr_service"

  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  sources = [ "src/lib.rs" ]
  features = [ "test_server_ready" ]

  deps = [ "../connect_adapter:conn_adapter" ]
  external_deps = [
    "hilog:hilog_rust",
    "ipc:ipc_rust",
  ]
}

ohos_rust_unittest("rust_ylong_cloud_ext_unit_test") {
  module_out_path =
      "distributeddatamgr/datamgr_service/services/rust/ylong_cloud_extension"
  sources = [ "src/lib.rs" ]

  external_deps = [
    "hilog:hilog_rust",
    "ipc:ipc_rust",
  ]
  deps = [
    ":ylong_cloud_extension",
    "../connect_adapter:conn_adapter",
  ]
  rustflags = [ "--cfg=feature=\"test_server_ready\"" ]
}
